--- a/client/src/components/Styles/Nav.module.css
+++ b/client/src/components/Styles/Nav.module.css
@@ -1,21 +1,50 @@
 #navContainer{
-    background-color: #222;
+    background: transparent;
     display: flex;
-    height: 10vh;
+    height: 8vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    transition: .3s;
 }
 .navSec{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    width: 50%;
+    width: 30%;
 }
 .navSec a{
     text-decoration: none;
 }
-.navSec h3{
+.navSec h4{
     color: #fff;
     transition: .2s;
+    font-family: 'Noto Sans', sans-serif;
+    color: #F7F7F7;
+    cursor: pointer;
 }
-.navSec h3:hover{
+.navSec h4:hover{
     transform: scale(1.02);
+}
+
+.navSec2 {
+    position: absolute;
+    top: 15px;
+    left: 50%;
+}
+.navSec2 img{
+    width: 50px;
+    height: 50px;
+}
+
+#navContainer2{
+    background-color: black;
+    display: flex;
+    height: 8vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    transition: .3s;
 }
