--- a/client/src/components/Styles/VehicleDetails.module.css
+++ b/client/src/components/Styles/VehicleDetails.module.css
@@ -1,10 +1,11 @@
 #containerVehicleDetails{
+    color: #EEEEEE;
+    background-color: #131313;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 #vehicleDetails{
-    background-color: #eee;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -29,7 +30,7 @@
 .photoAndDetails{
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
     min-width: 500px;
     width: 50%;
@@ -42,7 +43,7 @@
     max-height: 480px;
 }
 .photoAndDetails h2,h3,h4{
-    margin: 0;
+    margin: 15px;
 }
 
 #contImgs{
@@ -65,10 +66,12 @@
     margin: 5px;
 }
 .btnContact{
+    font-size: 1.2em;
     color: #fff;
-    background-color: #2185D5;
-    height: 30px;
-    width: 100px;
+    background-color: #393E46;
+    height: 40px;
+    width: 120px;
+    margin: 15px 0px;
     border: none;
     border-radius: 5px;
     transition: .2s;
