--- a/client/src/components/Styles/Vehicles.module.css
+++ b/client/src/components/Styles/Vehicles.module.css
@@ -1,8 +1,9 @@
 #vehiclesContainer{
+    padding: 80px 0px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    min-height: 80vh;
+    min-height: 83.6vh;
 }
 
 #sectionVehicles{
@@ -10,11 +11,11 @@
     justify-content: center;
     flex-wrap: wrap;
     width: 60vw;
-    min-height: 70vh;
+    min-height: 68vh;
 }
 
 .cardVechicle{
-    background-color: rgb(231, 231, 231);
+    background-color: #222;
     height: 300px;
     width: 280px;
     margin: 10px 20px;
@@ -32,11 +33,11 @@
     border-radius: 5px 5px 0px 0px;
 }
 .cardVechicle a{
-    color: #000;
+    color: #EEEEEE;
     text-decoration: none;
 }
 .cardVechicle a:visited{
-    color: #000;
+    color: #EEEEEE;
 }
 
 #btnsContainer{
