--- a/client/src/components/Styles/VehicleDetails.module.css
+++ b/client/src/components/Styles/VehicleDetails.module.css
@@ -1,6 +1,7 @@
 #containerVehicleDetails{
     color: #EEEEEE;
-    background-color: #131313;
+    /* background-color: #131313; */
+    background-image: linear-gradient(#050505 30%,#222);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -12,7 +13,7 @@
     align-items: center;
     width: 80vw;
     margin: 20px 0px;
-    padding: 10px 0px;
+    padding: 70px 0px;
 }
 
 #containDetails{
