--- a/client/src/components/Styles/Home.module.css
+++ b/client/src/components/Styles/Home.module.css
@@ -7,10 +7,6 @@
     height: 100%;
     object-fit: cover;
 }
-.main2{
-    width: 100%;
-    height: 100vh;
-}
 .content{
     position: absolute;
     width: 100%;
@@ -21,6 +17,7 @@
     justify-content: flex-end;
     align-items: center;
     line-height: 0;
+    font-family: 'Montserrat';
 }
 .animation{
     width: auto;
@@ -44,6 +41,7 @@
         bottom: 0%;
     }
 }
+
 .content h1{
     font-size: 50px;
 }
@@ -51,4 +49,39 @@
     font-size: 23px;
     margin-bottom: 100px;
 }
-
+.main2{
+    width: 100%;
+    height: 100vh;
+    background-color: #F7F7F7;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.main3{
+    width: 100%;
+    height: 180vh;
+    background-color: black;
+}
+.footer{
+    width: 100%;
+    height: 8vh;
+    background-color: black;
+    font-family: 'Noto Sans', sans-serif;
+    color: white;
+    font-size: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+.arrow{
+    font-size: 20px;
+    transition: .5s ease;
+    cursor: pointer;
+    text-decoration: none;
+    color: white;
+    margin-top: 5px;
+}
+.arrow:hover{
+    transform: translateX(20%)
+}
