--- a/client/src/components/Styles/Nav.module.css
+++ b/client/src/components/Styles/Nav.module.css
@@ -7,6 +7,7 @@
     left: 0;
     width: 100%;
     transition: .3s;
+    z-index: 1000;
 }
 .navSec{
     display: flex;
@@ -19,15 +20,14 @@
 }
 .navSec h4{
     color: #fff;
-    transition: .2s;
+    transition: .1s;
     font-family: 'Noto Sans', sans-serif;
     color: #F7F7F7;
     cursor: pointer;
 }
 .navSec h4:hover{
-    transform: scale(1.02);
+    border-bottom: 2px solid white;
 }
-
 .navSec2 {
     position: absolute;
     top: 15px;
@@ -47,4 +47,5 @@
     left: 0;
     width: 100%;
     transition: .3s;
+    z-index: 1000;
 }
