--- a/client/src/components/Styles/Vehicles.module.css
+++ b/client/src/components/Styles/Vehicles.module.css
@@ -1,60 +1,99 @@
-#vehiclesContainer{
+.superCont{
+    width: 100%;
+    height: 100vh;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
-    min-height: 80vh;
+    justify-content: flex-start;
 }
-
-#sectionVehicles{
+#vehiclesContainer{
+    height: 100%;
+    width: 35%;
+    background-color: #F7F7F7;
     display: flex;
     justify-content: center;
-    flex-wrap: wrap;
-    width: 60vw;
-    min-height: 70vh;
+    align-items: center;
 }
-
-.cardVechicle{
-    background-color: rgb(231, 231, 231);
-    height: 300px;
-    width: 280px;
-    margin: 10px 20px;
-    border-radius: 5px;
+.subDiv{
+    width: 75%;
+    height: 98%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+.imgDiv{
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    border-bottom: 1px solid grey;
+}
+.imgDiv img{
+    width: 50px;
+    height: 50px;
+    padding: 10px 0px;
+}
+.subDiv2 {
+    width: 100%;
+    height: 12%;
+    border-bottom: 1px solid grey;
+}
+.titleH2{
+    font-size: 20px;
+    transition: .2s;
+    text-decoration: none;
+    border-radius: 50%;
+    border: 1px solid #BBBFCA;
+    color: #BBBFCA;
+    background-color: #F7F7F7;
+    height: 30px;
+    cursor: pointer;
+    margin-top: 20px;
     transition: .2s;
 }
-.cardVechicle:hover{
-    transform: scale(1.013);
+.titleH2:hover{
+    color: black;
+    border: 1px solid black;
 }
-.cardVechicle h2,p{
-    margin: 2px;
-    font-size: 1em;
+#sectionVehicles{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    height: 70%;
+    overflow-y: scroll;
+    margin-top: 30px;
 }
-.cardVechicle div{
-    border-radius: 5px 5px 0px 0px;
+#sectionVehicles::-webkit-scrollbar{
+    width: 2px;
 }
-.cardVechicle a{
-    color: #000;
+#sectionVehicles::-webkit-scrollbar-track{
+    background: #BBBFCA;
+}
+#sectionVehicles::-webkit-scrollbar-thumb{
+    background: black;
+}
+#sectionVehicles::-webkit-scrollbar-thumb:hover{
+    background: #555;
+}
+#links{
     text-decoration: none;
 }
-.cardVechicle a:visited{
-    color: #000;
+.h2{
+    color: #BBBFCA;
+    font-family: 'Montserrat';
+    font-size: 30px;
+    transition: .2s ease;
 }
-
-#btnsContainer{
-    width: 60vw;
+.h2:hover{
+    color: black;
 }
-
-.buttonActive{
-    height: 30px;
-    width: 30px;
-    border: 1px solid #000;
-    border-radius: 3px;
+.imgContainer{
+    width: 65%;
+    height: 100%;
+    overflow: hidden;
 }
-.btnsPage{
-    height: 30px;
-    width: 30px;
-    border: none;
-    border-radius: 3px;
-}
-.btnsPage:hover{
-    transform: scale(1.08);
+.imgContainer img{
+    width: 100%;
+    height: 100%;
 }
