--- a/client/src/components/Styles/Vehicles.module.css
+++ b/client/src/components/Styles/Vehicles.module.css
@@ -84,6 +84,9 @@
     font-family: 'Montserrat';
     font-size: 30px;
     transition: .2s ease;
+    border: none;
+    background-color: #F7F7F7;
+    margin: 15px 0px;
 }
 .h2:hover{
     color: black;
@@ -96,4 +99,15 @@
 .imgContainer img{
     width: 100%;
     height: 100%;
+    animation: fadeIn .5s ease;
+}
+@keyframes fadeIn{
+    0% {
+        opacity: 0;
+        filter: blur(2px)
+    }
+    10% {
+        opacity: 1;
+        filter: blur(2px)
+    }
 }
