--- a/client/src/components/Styles/VehicleDetails.module.css
+++ b/client/src/components/Styles/VehicleDetails.module.css
@@ -5,23 +5,26 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow-x: hidden;
 }
 #vehicleDetails{
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 80vw;
-    margin: 20px 0px;
-    padding: 70px 0px;
+    width: 100vw;
+    margin: 0px;
+    padding: 0px;
 }
 
 #containDetails{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100%;
 }
 
 #containPhotoDetails{
-    width: 100%;
+    width: 70%;
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap-reverse;
@@ -34,37 +37,44 @@
     justify-content: center;
     align-items: center;
     min-width: 500px;
-    width: 50%;
-    height: 500px;
+    width: 100%;
+    height: 100vh;
 }
 .photoAndDetails img{
     min-width: 450px;
     min-height: 250px;
-    max-width: 650px;
-    max-height: 480px;
+    max-width: 100%;
+    max-height: 100%;
 }
-.photoAndDetails h2,h3,h4{
+/* .photoAndDetails h2,h3,h4{
     margin: 15px;
-}
+} */
 
 #contImgs{
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     flex-wrap: wrap;
-    width: 80%;
-    margin: 0 10%;
+    width: 30vw;
+    height: 100vh;
+    /* overflow-x: auto; */
+    /* margin-top: -30vh; */
 }
-#contImgs{
-    display: flex;
-    flex-wrap: wrap;
+#contImgs video{
+    opacity: .3;
+    height: 100%;
+    z-index: 1;
 }
 #contImgs img{
-    height: 100px;
-    margin: 5px;
+    z-index: 5;
+    height: 250px;
+    max-width: 400px;
+    margin-left: -500px;
 }
 #contImgs img:hover, .photoActive{
     opacity: .5;
-    height: 100px;
-    margin: 5px;
+    margin-left: -500px;
 }
 .btnContact{
     font-size: 1.2em;
