--- a/client/src/components/Styles/VehicleDetails.module.css
+++ b/client/src/components/Styles/VehicleDetails.module.css
@@ -7,6 +7,37 @@
     align-items: center;
     overflow-x: hidden;
 }
+#navVDetails{
+    background-image: linear-gradient(to right, #000 70%, rgba(0, 0, 0, 0));
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    position: fixed;
+    left: 0;
+    top: 30px;
+    width: 300px;
+    height: 130px;
+    padding-right: 30px;
+}
+#navVDetails img{
+    width: 80px;
+    height: 80px;
+}
+#navVDetails a{
+    color: #fff;
+}
+#navVDetails a:visited{
+    color: #fff;
+}
+.leftArrow{
+    font-size: 40px;
+    cursor: pointer;
+    transition: .2s;
+}
+.leftArrow:hover{
+    transform: translateX(-10%)
+}
+
 #vehicleDetails{
     display: flex;
     justify-content: center;
@@ -46,9 +77,29 @@
     max-width: 100%;
     max-height: 100%;
 }
-/* .photoAndDetails h2,h3,h4{
-    margin: 15px;
-} */
+
+#contentDetails{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+}
+
+#details{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-width: 500px;
+    width: 100%;
+    font-family: 'Montserrat';
+    font-size: 2em;
+}
+#detailsH3 h3,p{
+    /* font-size: 1em !important; */
+    margin: 0;
+}
 
 #contImgs{
     display: flex;
@@ -67,17 +118,18 @@
     z-index: 1;
 }
 #contImgs img{
+    opacity: .5;
     z-index: 5;
     height: 250px;
     max-width: 400px;
     margin-left: -500px;
 }
 #contImgs img:hover, .photoActive{
-    opacity: .5;
+    opacity: 1 !important;
     margin-left: -500px;
 }
 .btnContact{
-    font-size: 1.2em;
+    font-size: .5em !important;
     color: #fff;
     background-color: #393E46;
     height: 40px;
