--- a/client/src/components/Styles/VehicleDetails.module.css
+++ b/client/src/components/Styles/VehicleDetails.module.css
@@ -1,7 +1,7 @@
 #containerVehicleDetails{
-    color: #EEEEEE;
+    color: #000;
     /* background-color: #131313; */
-    background-image: linear-gradient(#050505 30%,#222);
+    background-image: linear-gradient(#ccc9c9 70%,rgb(255, 255, 255));
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -81,24 +81,43 @@
 #contentDetails{
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-evenly;
     min-height: 100vh;
 }
 
 #details{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     min-width: 500px;
     width: 100%;
+    height: 80vh;
     font-family: 'Montserrat';
-    font-size: 2em;
+    font-size: 2.5em;
 }
-#detailsH3 h3,p{
-    /* font-size: 1em !important; */
+#details p{
+    font-size: .8em;
     margin: 0;
+    width: 100%;
+    padding: 0 10%;
+}
+#details hr{
+    background-color: #000;
+    margin: 0 35%;
+    width: 25%;
+    height: 1px;
+    border: none;
+}
+
+.detailsMin{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    padding-left: 15%;
+    width: 35%;
 }
 
 #contImgs{
@@ -113,6 +132,7 @@
     /* margin-top: -30vh; */
 }
 #contImgs video{
+    max-width: 100%;
     opacity: .3;
     height: 100%;
     z-index: 1;
@@ -129,17 +149,33 @@
     margin-left: -500px;
 }
 .btnContact{
-    font-size: .5em !important;
+    font-size: 1.5em !important;
     color: #fff;
     background-color: #393E46;
-    height: 40px;
-    width: 120px;
+    height: 60px;
+    width: 150px;
     margin: 15px 0px;
     border: none;
     border-radius: 5px;
     transition: .2s;
 }
 .btnContact:hover{
+    transform: scale(1.02);
+}
+.btnDelete{
+    font-size: 1.5em !important;
+    position: absolute;
+    top: 0;
+    color: #fff;
+    background-color: #757779;
+    height: 60px;
+    width: 150px;
+    margin: 15px 0px;
+    border: none;
+    border-radius: 5px;
+    transition: .2s;
+}
+.btnDelete:hover{
     transform: scale(1.02);
 }
 
