--- a/client/src/components/Styles/VehicleDetails.module.css
+++ b/client/src/components/Styles/VehicleDetails.module.css
@@ -97,8 +97,17 @@
     font-family: 'Montserrat';
     font-size: 2.5em;
 }
+#details{
+    display: flex;
+}
+#details h3{
+    /* background-color: rgba(51, 51, 51, 0.548); */
+    padding: 2px 10px;
+}
 #details p{
-    font-size: .8em;
+    font-family: sans-serif !important;
+    font-weight: 100!important;
+    font-size: 1em;
     margin: 0;
     width: 100%;
     padding: 0 10%;
@@ -119,6 +128,10 @@
     padding-left: 15%;
     width: 35%;
 }
+.detailsMin div{
+    display: flex;
+    align-items: center;
+}
 
 #contImgs{
     display: flex;
@@ -137,16 +150,21 @@
     height: 100%;
     z-index: 1;
 }
-#contImgs img{
+#contImgs div{
+    display: flex;
+    flex-direction: column;
+    max-height: 80%;
+    max-width: 350px;
+    margin-left: -500px;
+    overflow-y: auto;
+}
+#contImgs div img{
     opacity: .5;
     z-index: 5;
     height: 250px;
-    max-width: 400px;
-    margin-left: -500px;
 }
-#contImgs img:hover, .photoActive{
+#contImgs div img:hover, .photoActive{
     opacity: 1 !important;
-    margin-left: -500px;
 }
 .btnContact{
     font-size: 1.5em !important;
