--- a/client/src/components/Styles/VehicleDetails.module.css
+++ b/client/src/components/Styles/VehicleDetails.module.css
@@ -8,7 +8,7 @@
     overflow-x: hidden;
 }
 #navVDetails{
-    background-image: linear-gradient(to right, #000 70%, rgba(0, 0, 0, 0));
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.795) , rgba(0, 0, 0, 0));
     display: flex;
     justify-content: space-evenly;
     align-items: center;
