Add map, about style, animations and fix styles

--- a/client/src/components/Styles/Vehicles.module.css
+++ b/client/src/components/Styles/Vehicles.module.css
@@ -92,7 +92,7 @@
     color: black;
 }
 .imgContainer{
-    background-color: red;
+    background-color: #F7F7F7;
     width: 65%;
     height: 100%;
     overflow: hidden;
