--- a/client/src/components/Styles/About.module.css
+++ b/client/src/components/Styles/About.module.css
@@ -1,8 +1,63 @@
 #aboutContainer{
     color: #fff;
-    background-color: #000;
-    height: 100vh;
+    background-color: #131313;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    overflow-x: hidden;
 }
-#aboutContainer section{
-    margin: 100px 0;
+#map{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 500px;
+    width: 100vw;
+    margin: 50px 0 100px;
+    animation: aparece 1.5s ease-in-out;
+}
+#aboutContainer h1{
+    margin: 150px 0;
+}
+#aboutContainer h1, h2, h3{
+    font-family: 'Montserrat';
+    animation: aparece 1.5s ease-in-out;
+}
+/* #aboutContainer h3{
+    font-size: 1.3em;
+} */
+
+.dataAbout{
+    width: 80vw;
+    display: flex;
+    justify-content: space-between;
+    text-align: left;
+    margin-bottom: 150px;
+    transition: .2s;
+    animation: abrirse 1.5s ease-in-out;
+}
+.dataAbout div{
+    width: 25vw;
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    margin-left: 5vw;
+}
+
+@keyframes abrirse {
+    from {
+        opacity: 0;
+        width: 60vw;
+    }to{
+        opacity: 1;
+        width: 80vw;
+    }
+}
+@keyframes aparece {
+    from {
+        opacity: 0;
+    }to{
+        opacity: 1;
+    }
 }
