--- a/client/src/components/Styles/Panel.module.css
+++ b/client/src/components/Styles/Panel.module.css
@@ -1,9 +1,9 @@
 #panelContainer{
+    background-color: #131313;
     display: flex;
     flex-direction: row;;
     justify-content: space-around;
-    min-height: 83vh;
-    margin: 30px 0;
+    min-height: 100vh;
 }
 #formPanel{
     background-color: #EEEEEE;
@@ -14,6 +14,7 @@
     min-width: 400px;
     padding: 25px 0;
     border-radius: 15px;
+    margin: 100px 0;
 }
 #formPanel button{
     height: 40px;
