--- a/client/src/components/Styles/Slider.module.css
+++ b/client/src/components/Styles/Slider.module.css
@@ -56,6 +56,7 @@
     background-color: #F7F7F7;
     height: 30px;
     cursor: pointer;
+    padding: 0;
 }
 .main2Text button:hover{
     border-bottom: 1px solid black;
