--- a/client/src/components/Styles/VehicleDetails.module.css
+++ b/client/src/components/Styles/VehicleDetails.module.css
@@ -96,6 +96,7 @@
     height: 80vh;
     font-family: 'Montserrat';
     font-size: 1.8em;
+    animation: aparecer 2s ease-in-out;
 }
 #details{
     display: flex;
@@ -115,10 +116,12 @@
 #details hr{
     background-color: #000;
     margin: 0 35%;
-    width: 20%;
+    width: 25%;
     height: 1px;
     border: none;
+    animation: expandir 3s ease-in-out;
 }
+
 
 .detailsMin{
     display: flex;
@@ -200,4 +203,21 @@
 #suggest{
     display: flex;
     flex-wrap: wrap;
+}
+
+
+@keyframes expandir {
+    from{
+        margin: 0 45%;
+        width: 5%;
+    }to{
+        width: 25%;
+    }
+}
+@keyframes aparecer {
+    from{
+        opacity: 0;
+    }to{
+        opacity: 1;
+    }
 }
