--- a/client/src/components/Styles/Marcas.module.css
+++ b/client/src/components/Styles/Marcas.module.css
@@ -21,3 +21,12 @@
     filter: grayscale(0);
     transform: scale(1.1);
 }
+
+@media screen and (max-width: 430px){
+    .container{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        width: 100%;
+        height: 360vh;
+    }
+}
