--- a/client/src/components/Styles/SearchBar.module.css
+++ b/client/src/components/Styles/SearchBar.module.css
@@ -27,3 +27,17 @@
 #searchBarContainer button:hover{
     background-color: #ddd;
 }
+
+@media screen and (max-width: 1024px){
+    #searchBarContainer{
+        width: 100%;
+        height: 50px;
+        margin: 10px 0px;
+    }
+    #searchBarContainer input{
+        width: 75%;
+    }
+    #searchBarContainer button{
+        width: 20%;
+    }
+}
