--- a/client/src/components/Styles/Marcas.module.css
+++ b/client/src/components/Styles/Marcas.module.css
@@ -24,9 +24,10 @@
 
 @media screen and (max-width: 430px){
     .container{
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        width: 100%;
-        height: 360vh;
+        grid-template-columns: repeat(2, 1fr);
+        height: 90vh;
+    }
+    .container button{
+        height: 30vh;
     }
 }
