--- a/client/src/components/Styles/VehicleDetails.module.css
+++ b/client/src/components/Styles/VehicleDetails.module.css
@@ -1,6 +1,5 @@
-#containerVehicleDetails{
+/* #containerVehicleDetails{
     color: #000;
-    /* background-color: #131313; */
     background-image: linear-gradient(#ccc9c9 70%,rgb(255, 255, 255));
     display: flex;
     flex-direction: column;
@@ -102,7 +101,6 @@
     display: flex;
 }
 #details h3{
-    /* background-color: rgba(51, 51, 51, 0.548); */
     padding: 2px 10px;
 }
 #details p{
@@ -144,8 +142,6 @@
     flex-wrap: wrap;
     width: 30vw;
     height: 100vh;
-    /* overflow-x: auto; */
-    /* margin-top: -30vh; */
 }
 #contImgs video{
     max-width: 100%;
@@ -220,4 +216,69 @@
     }to{
         opacity: 1;
     }
+} */
+#section1{
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    display: flex;
+    flex-direction: row-reverse;
+    background-color: white;
+}
+#photo{
+    width: 70%;
+    height: 100%;
+    overflow: hidden;
+    background-color: white;
+}
+#photo img{
+    width: 100%;
+    height: 100%;
+}
+#videoAndDiv{
+    width: 30%;
+    height: 100%;
+    flex-wrap: wrap;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#videoAndDiv video{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: .8;
+}
+#videoAndDiv div{
+    width: 35vh;
+    height: 75vh;
+    position: absolute;
+    background-color: black;
+    overflow-y: scroll;
+    display: flex;
+    flex-direction: column;
+    cursor: pointer;
+    box-shadow: 5px 5px 10px rgb(0, 0, 0);
+}
+#videoAndDiv div::-webkit-scrollbar{
+    width: 10px;
+    transition: .4s;
+}
+#videoAndDiv div::-webkit-scrollbar-track{
+    width: 15px;
+    background: white;
+}
+#videoAndDiv div::-webkit-scrollbar-thumb{
+    background: grey;
+}
+#videoAndDiv div::-webkit-scrollbar-thumb:hover{
+    background: black;
+}
+.photoActive{
+    width: 100%;
+}
+#section2{
+    width: 100%;
+    height: 100vh;
+    background-color: black;
 }
