--- a/client/src/components/Styles/Panel.module.css
+++ b/client/src/components/Styles/Panel.module.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
-    height: 160vh;
+    height: 180vh;
 }
 #firstDiv{
     display: flex;
@@ -155,5 +155,12 @@
     margin-left: 30px;
     padding: 10px 10px;
     border: none;
+    border-bottom: 1px solid black;
+}
+#h2Button{
+    height: 30px;
+    cursor: pointer;
+}
+#h2Button:hover{
     border-bottom: 1px solid black;
 }
