--- a/client/src/components/Styles/Panel.module.css
+++ b/client/src/components/Styles/Panel.module.css
@@ -28,15 +28,15 @@
 }
 #divImages{
     width: 65%;
-    height: 80%;
+    height: 85%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-around;
 }
 #imgPrincipal{
     width: 100%;
-    height: 75%;
+    height: 80%;
 }
 #imgPrincipal img{
     width: 100%;
@@ -44,7 +44,7 @@
 }
 #imgCarrousel{
     width: 90%;
-    height: 20%;
+    height: 15%;
     overflow-x: scroll;
     display: flex;
     flex-direction: row;
@@ -226,7 +226,7 @@
 }
 #divPres {
     width: 100%;
-    height: 50%;
+    height: 30%;
     display: flex;
     flex-direction: column;
     align-items: center;
