--- a/client/src/components/Styles/Panel.module.css
+++ b/client/src/components/Styles/Panel.module.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
-    height: 180vh;
+    min-height: 100vh;
 }
 #form{
     display: flex;
@@ -21,12 +21,14 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
     width: 60%;
     height: 50%;
     margin-top: 50px;
     border-radius: 30px;
 }
 #divImages{
+    min-width: 400px;
     width: 65%;
     height: 85%;
     display: flex;
@@ -35,12 +37,14 @@
     justify-content: space-around;
 }
 #imgPrincipal{
+    display: flex;
+    align-items: center;
     width: 100%;
-    height: 80%;
+    height: 600px;
 }
 #imgPrincipal img{
     width: 100%;
-    height: 100%;
+    max-height: 100%;
 }
 #imgCarrousel{
     width: 90%;
@@ -78,6 +82,7 @@
     transform: scale(1.08)
 }
 #divInfo{
+    min-width: 400px;
     width: 30%;
     height: 80%;
     display: flex;
@@ -87,7 +92,7 @@
     gap: 10px;  
 }
 #input1 {
-    width: 90%;
+    width: 87%;
     height: 5%;
     padding: 5px 5px;
     border: none;
@@ -96,14 +101,57 @@
     font-size: 20px;
     font-family: "Montserrat";
 }
-#divInfo div{
+.select1{
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
 }
+.select2{
+    height: 150px;
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+}
+.select2 input::-webkit-file-upload-button {
+    visibility: hidden;
+  }
+.select2 input::before {
+    content: 'SELECT FILES';
+    display: inline-block;
+    background-color: #ddd;
+    background: linear-gradient(top, #f9f9f9, #e3e3e3);
+    border: 1px solid #999;
+    border-radius: 3px;
+    padding: 5px 8px;
+    outline: none;
+    white-space: nowrap;
+    /* -webkit-user-select: none; */
+    cursor: pointer;
+    font-family: "Montserrat";
+    text-shadow: 1px 1px #fff;
+    font-weight: 700;
+    font-size: 10pt;
+    margin-right: -120px;
+  }
+.select2 input:hover::before {
+    border-color: black;
+  }
+.select2 input:active::before {
+    background: -webkit-linear-gradient(top, #e3e3e3, #f9f9f9);
+  }
+  
+/* .select2 input{
+    background-color: blue;
+    width: 80%;
+    height: 30px;
+    border: none;
+    border-radius: 10px;
+} */
 #input2{
-    width: 45%;
+    width: 39.5%;
     padding: 10px 8px;
     height: 5%;
     border: none;
@@ -130,15 +178,15 @@
     font-size: 15px;
     width: 90%;
     height: 20%;
+    min-height: 100px;
     overflow-y: scroll;
 }
 #h1{
     font-family: "Montserrat";
-    font-size: 50px;
+    font-size: 40px;
 }
 #caracteristicas{
     width: 60%;
-    height: 40%;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -150,7 +198,7 @@
     font-size: 25px;
     font-family: "Helvetica";
 }
-#general{
+.general{
     width: 100%;
     height: 20%;
     display: flex;
@@ -158,19 +206,20 @@
     align-items: flex-start;
     justify-content: center;
 }
-#general div{
+.general div{
     width: 100%;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
 }
-#general label{
+.general label{
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
     width: 80%;
+    margin: 10px 0;
 }
-#general select{
+.general select{
     margin-left: 30px;
     padding: 10px 10px;
     border: none;
@@ -253,4 +302,20 @@
 }
 #divPres button:hover{
     transform: scale(1.05)
+}
+
+
+@media screen and (max-width: 1024px) {
+    #imgPrincipal{
+        display: flex;
+        align-items: center;
+        width: 100%;
+        height: 350px;
+    }
+    .general div{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    #h1{
+        font-size: 30px;
+    }
 }
