--- a/client/src/components/Styles/VehicleDetails.module.css
+++ b/client/src/components/Styles/VehicleDetails.module.css
@@ -1,284 +1,21 @@
-/* #containerVehicleDetails{
-    color: #000;
-    background-image: linear-gradient(#ccc9c9 70%,rgb(255, 255, 255));
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    overflow-x: hidden;
-}
-#navVDetails{
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.795) , rgba(0, 0, 0, 0));
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    position: fixed;
-    left: 0;
-    top: 30px;
-    width: 300px;
-    height: 130px;
-    padding-right: 30px;
-}
-#navVDetails img{
-    width: 80px;
-    height: 80px;
-}
-#navVDetails a{
-    color: #fff;
-}
-#navVDetails a:visited{
-    color: #fff;
-}
-.leftArrow{
-    font-size: 40px;
-    cursor: pointer;
-    transition: .2s;
-}
-.leftArrow:hover{
-    transform: translateX(-10%)
-}
-
-#vehicleDetails{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100vw;
-    margin: 0px;
-    padding: 0px;
-}
-
-#containDetails{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-}
-
-#containPhotoDetails{
-    width: 70%;
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap-reverse;
-    margin: 0px;
-}
-
-.photoAndDetails{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    min-width: 500px;
+#section1 {
     width: 100%;
     height: 100vh;
-}
-.photoAndDetails img{
-    min-width: 450px;
-    min-height: 250px;
-    max-width: 100%;
-    max-height: 100%;
-}
-
-#contentDetails{
+    background-color: black;
     display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    min-height: 100vh;
-}
-
-#details{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    min-width: 500px;
-    width: 100%;
-    height: 80vh;
-    font-family: 'Montserrat';
-    font-size: 1.8em;
-    animation: aparecer 2s ease-in-out;
-}
-#details{
-    display: flex;
-}
-#details h3{
-    padding: 2px 10px;
-}
-#details p{
-    font-family: sans-serif !important;
-    font-weight: 100!important;
-    font-size: 1em;
-    margin: 0;
-    width: 100%;
-    padding: 0 10%;
-}
-#details hr{
-    background-color: #000;
-    margin: 0 35%;
-    width: 25%;
-    height: 1px;
-    border: none;
-    animation: expandir 3s ease-in-out;
-}
-
-
-.detailsMin{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: flex-start;
-    padding-left: 15%;
-    width: 35%;
-}
-.detailsMin div{
-    display: flex;
-    align-items: center;
-}
-
-#contImgs{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    width: 30vw;
-    height: 100vh;
-}
-#contImgs video{
-    max-width: 100%;
-    opacity: .3;
-    height: 100%;
-    z-index: 1;
-}
-#contImgs div{
-    display: flex;
-    flex-direction: column;
-    max-height: 80%;
-    max-width: 350px;
-    margin-left: -500px;
-    overflow-y: auto;
-}
-#contImgs div img{
-    opacity: .5;
-    z-index: 5;
-    height: 250px;
-}
-#contImgs div img:hover, .photoActive{
-    opacity: 1 !important;
-}
-.btnContact{
-    font-size: 1.5em !important;
-    color: #fff;
-    background-color: #393E46;
-    height: 60px;
-    width: 150px;
-    margin: 15px 0px;
-    border: none;
-    border-radius: 5px;
-    transition: .2s;
-}
-.btnContact:hover{
-    transform: scale(1.02);
-}
-.btnDelete{
-    font-size: 1.5em !important;
-    position: absolute;
-    top: 0;
-    color: #fff;
-    background-color: #757779;
-    height: 60px;
-    width: 150px;
-    margin: 15px 0px;
-    border: none;
-    border-radius: 5px;
-    transition: .2s;
-}
-.btnDelete:hover{
-    transform: scale(1.02);
-}
-
-#suggest{
-    display: flex;
-    flex-wrap: wrap;
-}
-
-
-@keyframes expandir {
-    from{
-        margin: 0 45%;
-        width: 5%;
-    }to{
-        width: 25%;
-    }
-}
-@keyframes aparecer {
-    from{
-        opacity: 0;
-    }to{
-        opacity: 1;
-    }
-} */
-#section1{
-    width: 100%;
-    height: 100vh;
-    overflow: hidden;
-    display: flex;
-    flex-direction: row-reverse;
-    background-color: white;
-}
-#photo{
-    width: 70%;
-    height: 100%;
-    overflow: hidden;
-    background-color: white;
-}
-#photo img{
-    width: 100%;
-    height: 100%;
-}
-#videoAndDiv{
-    width: 30%;
-    height: 100%;
-    flex-wrap: wrap;
-    display: flex;
-    align-items: center;
+    align-items: flex-end;
     justify-content: center;
 }
-#videoAndDiv video{
+#video {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    opacity: .8;
+    opacity: .7
 }
-#videoAndDiv div{
-    width: 35vh;
-    height: 75vh;
+#title{
     position: absolute;
-    background-color: black;
-    overflow-y: scroll;
-    display: flex;
-    flex-direction: column;
-    cursor: pointer;
-    box-shadow: 5px 5px 10px rgb(0, 0, 0);
-}
-#videoAndDiv div::-webkit-scrollbar{
-    width: 10px;
-    transition: .4s;
-}
-#videoAndDiv div::-webkit-scrollbar-track{
-    width: 15px;
-    background: white;
-}
-#videoAndDiv div::-webkit-scrollbar-thumb{
-    background: grey;
-}
-#videoAndDiv div::-webkit-scrollbar-thumb:hover{
-    background: black;
-}
-.photoActive{
-    width: 100%;
-}
-#section2{
-    width: 100%;
-    height: 100vh;
-    background-color: black;
+    color: white;
+    font-family: "Montserrat";
+    font-size: 45px;
+    margin-bottom: 5%;
 }
