--- a/client/src/components/Styles/VehicleDetails.module.css
+++ b/client/src/components/Styles/VehicleDetails.module.css
@@ -1,3 +1,50 @@
+#contPhoto{
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100vw;
+    z-index: 1000;
+}
+#bigPhoto{
+    background-color: rgba(0, 0, 0, 0.781);
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100vw;
+    z-index: 1000;
+}
+#contPhoto img{
+    position: absolute;
+    top: 10vh;
+    max-width: 80vw;
+    max-height: 80vh;
+    min-width: 25vw;
+    margin-bottom: -100%;
+    z-index: 1000;
+}
+#bigPhoto button{
+    position: absolute;
+    top: 5vh;
+    left: 20vw;
+    height: 40px;
+    width: 40px;
+    border: none;
+    border-radius: 50%;
+    box-shadow: 0px 10px 15px black;
+    transition: .2s;
+    z-index: 2001 !important;
+}
+#bigPhoto button:hover{
+    transform: scale(1.1);
+}
+#bigPhotoN{
+    display: none;
+}
+
 #section1 {
     width: 100%;
     height: 100vh;
@@ -46,6 +93,10 @@
     font-family: "Helvetica";
     font-weight: normal;
     font-size: 23px;
+    transition: .1s;
+}
+#divNav h2:hover{
+    transform: scale(1.03);
 }
 #div2 {
     width: 100%;
@@ -63,7 +114,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    justify-content: center;
+    justify-content: flex-start;
 }
 #divIzq div {
     overflow: hidden;
@@ -71,7 +122,8 @@
 }
 #divA{
     width: 70%;
-    height: 30%;
+    min-height: 300px;
+    margin: 30px 0 !important;
     text-justify: inter-word;
     text-align: justify;
 }
