--- a/client/src/components/Styles/Home.module.css
+++ b/client/src/components/Styles/Home.module.css
@@ -66,7 +66,7 @@
 .footer{
     width: 100%;
     height: 8vh;
-    background-color: black;
+    background-color: #292c31;
     font-family: 'Noto Sans', sans-serif;
     color: white;
     font-size: 15px;
