--- a/client/src/components/Styles/VehicleDetails.module.css
+++ b/client/src/components/Styles/VehicleDetails.module.css
@@ -59,6 +59,12 @@
     object-fit: cover;
     opacity: .7
 }
+#img1 {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: .7;
+}
 #title{
     position: absolute;
     color: white;
@@ -77,6 +83,7 @@
 #div1{
     width: 60%;
     height: 80%;
+
 }
 #divNav {
     border-bottom: 1px solid grey;
@@ -100,7 +107,7 @@
     transition: .2s;
 }
 #divNav h2:hover{
-    transform: scale(1.03);
+    border-bottom: 4px solid black;
 }
 #div2 {
     width: 100%;
@@ -186,37 +193,60 @@
     width: 100%;
     height: 100%;
 }
-
+#secContact {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    margin-top: 5%;
+}
 #secContact h1{
     animation: aparece 1.5s ease-in-out;
+}
+#secContact form{
+    width: 100%;
 }
 #secContact form textarea{
     font-family: 'Montserrat';
     color: #EEEEEE;
     background-color: #222;
     height: 300px;
-    width: 40%;
+    width: 35%;
     min-width: 230px;
     padding: 10px 15px;
     resize: none;
     overflow: auto;
     border-radius: 5px;
     animation: aparece 1.5s ease-in-out;
+    font-size: 15px;
 }
 #secContact a button{
     font-family: 'Montserrat';
-    color: #fff;
-    background-color: #393E46;
+    color: black;
+    background-color: transparent;
     width: 120px;
     margin: 15px;
     padding: 10px 10px;
     border: none;
+    width: 95%;
     border-radius: 5px;
-    transition: .2s;
+    transition: .1s;
     animation: aparece 1.5s ease-in-out;
+    cursor: pointer;
 }
 #secContact a button:hover{
-    transform: scale(1.03);
+    transform: scale(1.02);
+}
+#p {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 15%;
+}
+#p img{
+    width: 30px;
+    height: 30px;
 }
 
 @keyframes aparece {
@@ -226,4 +256,92 @@
     }to{
         opacity: 1;
     }
+}
+
+#divInfo {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#divInfoCont{
+    height: 90%;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    animation: aparece 1.5s ease-in-out;
+}
+#divInfoCont h2 {
+    border-bottom: 1px solid black;
+    font-weight: 1000;
+    /* animation: aparece 1.5s ease-in-out; */
+}
+#divInfoCont div{
+    height: 8%;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    /* animation: aparece 1.5s ease-in-out; */
+}
+#divInfoCont label{
+    width: 60%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    /* animation: aparece 1.5s ease-in-out; */
+}
+#divInfoCont span{
+    font-weight: bold;
+    border-bottom: 1px solid black;
+    /* animation: aparece 1.5s ease-in-out; */
+}
+#secAdmin {
+    margin-top: 5%;
+    width: 100%;
+    height: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    animation: aparece 1.5s ease-in-out;
+}
+#secAdminCont {
+    width: 70%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10%;
+}
+#link{
+    width: 25%;
+    height: 5%;
+}
+#btn1{
+    width: 25%;
+    height: 5%;
+    font-family: 'Montserrat';
+    color: white;  
+    background-color: black;
+    border: none;
+    cursor: pointer;
+    transition: .2s
+}
+#btn1:hover{
+    transform: scale(1.03)
+}
+#btn2{
+    width: 100%;
+    height: 100%;
+    font-family: 'Montserrat';
+    color: white;  
+    background-color: black;
+    border: none;
+    cursor: pointer;
+    transition: .2s
+}
+#btn2:hover{
+    transform: scale(1.03)
 }
