--- a/client/src/components/Styles/VehicleDetails.module.css
+++ b/client/src/components/Styles/VehicleDetails.module.css
@@ -383,6 +383,49 @@
         height: 35%;
     }
 }
+@media screen and (max-width: 1024px) {
+    #divInfo {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    #divInfoCont{
+        height: 90%;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        animation: aparece 1.5s ease-in-out;
+    }
+    #divInfoCont h2 {
+        border-bottom: 1px solid black;
+        font-weight: 1000;
+        /* animation: aparece 1.5s ease-in-out; */
+    }
+    #divInfoCont div{
+        height: 10%;
+        width: 100%;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        /* animation: aparece 1.5s ease-in-out; */
+    }
+    #divInfoCont label{
+        width: 60%;
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        /* animation: aparece 1.5s ease-in-out; */
+    }
+    #divInfoCont span{
+        font-weight: bold;
+        border-bottom: 1px solid black;
+        /* animation: aparece 1.5s ease-in-out; */
+    }
+}
 @media screen and (max-width: 425px) {
     #contPhoto img{
         top: 30vh;
@@ -393,5 +436,29 @@
     }
     #div2{
         margin-left: -50px;
+    }
+    #divInfoCont{
+        height: 90%;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        animation: aparece 1.5s ease-in-out;
+    }
+    #divInfoCont div{
+        min-height: 15%;
+        width: 100%;
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        /* animation: aparece 1.5s ease-in-out; */
+    }
+    #divInfoCont label{
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        /* animation: aparece 1.5s ease-in-out; */
     }
 }
