--- a/client/src/components/Styles/Contact.module.css
+++ b/client/src/components/Styles/Contact.module.css
@@ -6,7 +6,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     font-family: 'Montserrat';
     overflow: hidden;
 }
